deployment-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-aplicacion
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mi-aplicacion
  template:
    metadata:
      labels:
        app: mi-aplicacion
    spec:
      containers:
      - name: mi-contenedor
        image: darkedson/test-repo
        ports:
        - containerPort: 8000
        volumes:
        - name: config-volume
          configMap:
            name: mi-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: mi-aplicacion
spec:
  selector:
    app: mi-aplicacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mi-aplicacion.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mi-aplicacion
            port:
              number: 80
